--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
   },
   "dependencies": {
     "@next/font": "13.2.3",
+    "@reduxjs/toolkit": "^1.9.3",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "joi": "^17.8.3",
+    "mongoose": "^7.0.0",
     "next": "13.2.3",
+    "next-auth": "^4.20.1",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
