--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1"
   },
