--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "joi": "^17.8.3",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
