--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-multi-input": "^1.0.0",
     "react-redux": "^8.0.5",
+    "react-select": "^5.7.0",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
