--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "formidable": "^2.1.1",
     "joi": "^17.8.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
+    "multer": "^1.4.5-lts.1",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "nextjs-progressbar": "^0.0.16",
