--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "nextjs-progressbar": "^0.0.16",
