Uploading Cv Done

--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "@next/font": "13.2.3",
     "@reduxjs/toolkit": "^1.9.3",
     "bcryptjs": "^2.4.3",
-    "busboy": "^1.6.0",
+    "crypto": "^1.0.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "formidable": "^2.1.1",
     "joi": "^17.8.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
-    "moment": "^2.29.4",
+    "mkdirp": "^2.1.6",
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
-    "multiparty": "^4.2.3",
+    "mv": "^2.1.1",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "nextjs-progressbar": "^0.0.16",
