creating Pages for Job Application

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-auth": "^4.20.1",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-multi-input": "^1.0.0",
