--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
