--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.2.3",
-    "@react-pdf/renderer": "^3.1.9",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@reduxjs/toolkit": "^1.9.3",
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
@@ -27,6 +27,7 @@
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "nextjs-progressbar": "^0.0.16",
+    "pdfjs-dist": "^2.6.347",
     "react": "18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
@@ -40,8 +41,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "copy-webpack-plugin": "^11.0.0",
     "file-loader": "^6.2.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "worker-loader": "^3.0.8"
   }
 }
