--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "mv": "^2.1.1",
-    "next": "13.2.3",
+    "next": "^13.2.3",
     "next-auth": "^4.20.1",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
